updated the jenkins file